--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 
-// @import url(./font.css);
+@import url(./font.css);
 
 @font-face {
     font-family: circular-Black;
