Navbar and Dashboard Playlist

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,89 +44,22 @@
             <div class="sticky-top top-menu">
 
                 <div class="profile">
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown button
+                    <div class="dropdown drop-profile">
+                        <button class="btn btn-secondary dropdown-toggle profile-btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                         <img src="../assets/Profile-2.jpg" class="profile-img"> Dinie
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                          <li><a class="dropdown-item active" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                          <li><hr class="dropdown-divider"></li>
-                          <li><a class="dropdown-item" href="#">Separated link</a></li>
+                        <ul class="dropdown-menu dropdown-menu-dark" style="background-color: #282828; width: 13em; font-family: circular-light;">
+                          <li><a class="dropdown-item active" href="#">Account <span class="ext-links"><i class="fas fa-external-link-alt"></i></span></a></li>
+                          <li><a class="dropdown-item" href="#">Profile</a></li>
+                          <li><a class="dropdown-item" href="#">Upgrade To Premium <span class="ext-links"><i class="fas fa-external-link-alt"></i></span></a></li>
+                          <li><a class="dropdown-item" href="#">Support <span class="ext-links"><i class="fas fa-external-link-alt"></i></span></a></li>
+                          <li><a class="dropdown-item" href="#">Download <span class="ext-links"><i class="fas fa-external-link-alt"></i></span></a></li>
+                          <li><a class="dropdown-item" href="#">Setting</a></li>
+                          <li><hr class="dropdown-divider" style="background-color: #3e3e3e;"></li>
+                          <li><a class="dropdown-item" href="#">Logout</a></li>
                         </ul>
                       </div>
-                    <!-- <div class="dropdown" style="right: 27px;">
-                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                         <img src="../assets/Profile.jpg" class="profile-pic"> Dropdown
-                        </a>
-                      
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Action</a></li>
-                          <li><a class="dropdown-item" href="#">Another action</a></li>
-                          <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                </div> -->
                 </div>
-                <!-- <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown button
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </div> -->
-                <!-- <nav class="navbar navbar-expand-lg top-menu">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#">Navbar</a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                          </li>
-                          <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="#">Action</a></li>
-                              <li><a class="dropdown-item" href="#">Another action</a></li>
-                              <li><hr class="dropdown-divider"></li>
-                              <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                          </li>
-                        </ul>
-                        <form class="d-flex" role="search">
-                          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                          <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
-                      </div>
-                    </div>
-                  </nav> -->
-                <!-- <nav class="navbar navbar-expand static-top">
-                    <ul class="navbar-nav ml-auto ml-md-0 nav-right">
-                        <ng-container>
-                        <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
-                              aria-haspopup="true" aria-expanded="false">
-                              <i class="fas fa-user-circle fa-fw"></i>
-                              <span class="d-none d-sm-inline">Dinie</span>
-                            </a>
-                          </li>
-                        </ng-container>
-                    </ul>
-              </nav> -->
               </div>
             <router-outlet></router-outlet>
         </div>
