--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,46 @@
-<!-- <p>dashboard works!</p>
-<div class="container-fluid">
-    <div class="row">
-            <div class="col-md-2 side-menu">
-            <div>
-                <div class="img-icon spotify-icon"><i class="fab fa-spotify"></i></div>
-                <h4 class="spotify-title"> Spotify</h4>
-            </div>
-            </div>
-    </div>
-</div> -->
-
 <div class="container">
-     <h1>Testing</h1>
+    <div class="row" style="margin-bottom: 1rem;">
+        <h3>Good Afternoon</h3>
+    </div>
+
+    <div class="row" style="margin-bottom: 1rem;">
+        <div class="col-md-4">
+            <div class="playlist-dashboard">
+                    <img src="../../assets/cover/cover-1.jpg" class="cover-photo">
+                    <span class="cover-name">Your Top Song 2021</span>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="playlist-dashboard">
+                <img src="../../assets/cover/cover-2.jpg" class="cover-photo">
+                <span class="cover-name">Your Time Capsule</span>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="playlist-dashboard">
+                <img src="../../assets/cover/cover-3.jpg" class="cover-photo">
+                <span class="cover-name">Liked Songs</span>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="playlist-dashboard">
+                    <img src="../../assets/cover/cover-4.jpg" class="cover-photo">
+                    <span class="cover-name">Upside Down Playlist</span>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="playlist-dashboard">
+                <img src="../../assets/cover/cover-5.jpg" class="cover-photo">
+                <span class="cover-name">On Repeat</span>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="playlist-dashboard">
+                <img src="../../assets/cover/cover-6.jpg" class="cover-photo">
+                <span class="cover-name">This Is Taylor Swift</span>
+            </div>
+        </div>
+    </div>
 </div>
