--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,8 @@
     font-family: circular-medium;
     src: url(./assets/Circular/CircularStd-Medium.otf) format("opentype");
 }
+
+@font-face {
+    font-family: circular-light;
+    src: url(./assets/Circular/CircularStd-Light.otf) format("opentype");
+}
