Added Playlist Dashboard UI

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -106,7 +106,7 @@
     position: absolute;
     width: 7em;
     height: 2.5em;
-    right: 30px;
+    right: 3em;
     top: 15px;
     // border-radius: 42px;
 }
