--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,6 @@
     font-family: circular-light;
     src: url(./assets/Circular/CircularStd-Light.otf) format("opentype");
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
