--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -11,6 +11,7 @@ small{
 .container{
     margin: 0 3em;
     padding-top: 2.5em;
+    padding-bottom: 7em;
 }
 
 .playlist-dashboard{
@@ -64,9 +65,9 @@ small{
     padding-left: 1em;
 }
 
-.dash-playlist{
-    position: absolute;
-}
+// .dash-playlist{
+//     position: absolute;
+// }
 
 .descp{
     padding-left: 1em;
