--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,17 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 
+h1,h2,h3,h4,h5,h6,span,p{
+    font-family: circular-bold;
+    color: #fff;
+}
+
+small{
+    font-family: circular-light;
+    color: #969696;
+}
+
+
 .side-menu{
     background-color: #000000;
     height: 103vh;
@@ -65,8 +76,25 @@
     padding-left: 3em;
     font-family: circular-medium;
     font-size: 15px;
+    text-decoration: none;
+    color: #b2b2b2;
+   
 }
 
+a.liked-songs:hover{
+    color: #fff;
+}
+
+a.liked-songs.active{
+    color: #fff;
+}
+.square-box.active{
+    color: #fff;
+}
+
+.square-box:hover{
+    color: #fff;
+}
 .square-box{
     width: 1.5em;
     height: 1.5em;
@@ -152,3 +180,143 @@ img.profile-img {
     padding-left: 13em;
     
 }
+
+footer{
+    height: 5em;
+    background-color: #181818;
+    border-top: #282828 2px solid;
+}
+
+.play-img{
+    float: left;
+    width: 30%;
+}
+
+.play-progress{
+    float: left;
+    width: 50%;
+}
+footer .container{
+    margin: 0 1em;
+    // max-width: 100vw;
+    // width: 100vw;
+    // overflow: hidden;
+}
+
+.footer-img{
+    position: absolute;
+    width: 4em;
+    top: 7px;
+}
+
+.footer-song{
+    position: absolute;
+    top: 1px;
+    padding-top: 1em;
+    padding-left: 5em;
+}
+
+.footer-row{
+    width: 100vw;
+    max-width: 100vw;
+}
+
+.minimize{
+    text-align: right;
+    padding-top: 2em;
+    padding-right: 1em;
+}
+
+.side {
+    font-size: 20px;
+    color: #bababa;
+} 
+
+.play{
+    margin-left: 6px;
+    font-size: 24px;
+}
+
+.icon-play{
+    padding-top: 12px;
+    display: grid;
+    justify-content: center;
+    margin-bottom: 1em;
+}
+.icon-footer{
+    margin-right: 1em;
+}
+.artist-info{
+    width: 20% !important;
+    height: 5em;
+    // background-color: aqua;
+}
+
+.middle-play{
+    width: 50% !important;
+    height: 5em;
+    margin-left: 5em;
+    // background-color:rgba(138, 20, 20, 0.7);
+}
+
+.volume{
+    width: 25% !important;
+    height: 5em;
+    position: relative;
+    right: -8em;
+    padding: 2em;
+    // background-color:rgba(33, 139, 201, 0.7);
+}
+
+.progress-play{
+    width: 50% !important;
+    // border-radius: 5px;
+    // height: 5px;
+    // background-color: #5e5e5e;
+}
+
+.vol-up{
+    width: 25% !important;
+    padding-top: 10px;
+    padding-left: 0 !important;
+}
+
+.icon-vol{
+    width: 30% !important;
+    text-align: right;
+    font-size: 14px;
+
+}
+.progress{
+    height: 4px;
+}
+
+.progress-bar{
+    background-color: #1ed760;
+}
+
+.pgrs{
+    display: flex;
+    justify-content: center;
+}
+
+.minute{
+    width: 10% !important;
+    text-align: right;
+    position: relative;
+    padding: 0 !important;
+    bottom: 9px;
+    font-size: 12px;
+    color: #bababa;
+}
+
+.minute-last{
+    width: 10% !important;
+    position: relative;
+    padding: 0 !important;
+    bottom: 9px;
+    font-size: 12px;
+    color: #bababa;
+}
+
+
