--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -64,4 +64,44 @@
         </div>
     </div>
 
+    <div class="row">
+        <h4 class="dash-title">Your top mixes</h4>
+    </div>
+
+    <div class="row dash-playlist">
+        <div class="col-md-2" *ngFor="let card of topMix">
+            <div class="card-box" >
+                <img class="card-img" src="{{card.img}}">
+                <div class="dash-descp">
+                    <span>{{card.title}}</span>
+                </div>  
+                <div class="descp">
+                    <div class="small-text">
+                        <small style="font-weight: 700;">{{card.descp}}</small>
+                    </div>
+                </div>
+           </div>           
+        </div>
+    </div>
+
+    <div class="row">
+        <h4 class="dash-title">Your top mixes</h4>
+    </div>
+
+    <div class="row dash-playlist">
+        <div class="col-md-2" *ngFor="let card of topMix">
+            <div class="card-box" >
+                <img class="card-img" src="{{card.img}}">
+                <div class="dash-descp">
+                    <span>{{card.title}}</span>
+                </div>  
+                <div class="descp">
+                    <div class="small-text">
+                        <small style="font-weight: 700;">{{card.descp}}</small>
+                    </div>
+                </div>
+           </div>           
+        </div>
+    </div>
+
 </div>
