--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 
+h1,h2,h3,h4,h5,h6,span{
+    font-family: circular-bold;
+    color: #fff;
+}
+
+small{
+    font-family: circular-light;
+    color: #969696;
+}
 
 @import url(./font.css);
 
