--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,29 @@
-<p>search works!</p>
+<div class="container">
+        <div class="row">
+            <h4>Browser all</h4>
+        </div>
+
+        <div class="row browser-box">
+           <div class="col-md-2 box" *ngFor="let data of browseAll" style=" background-color:rgb(167, 143, 113) ;" >
+                <div class="title">
+                    <h4>{{data.title}}</h4>
+                </div>
+                <div class="img">
+                        <img src="{{data.img}}">
+                </div>
+           </div> 
+           <!-- <div class="col-md-2 box" style=" background-color:rgb(167, 143, 113) ;">
+                <div class="title">
+                    <h4>2022 Wrapped</h4>
+                </div>
+                <div class="img">
+                        <img src="../../assets/cover/cover-1.jpg">
+                </div>
+            </div> 
+           <div class="col-md-2 box" style=" background-color:rgb(167, 143, 113) ;"></div> 
+           <div class="col-md-2 box" style=" background-color:rgb(167, 143, 113) ;"></div> 
+           <div class="col-md-2 box" style=" background-color:rgb(167, 143, 113) ;"></div> 
+           <div class="col-md-2 box" style=" background-color:rgb(167, 143, 113) ;"></div> 
+           <div class="col-md-2 box" style=" background-color:rgb(167, 143, 113) ;"></div>  -->
+        </div>
+</div>
