--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,7 +4,7 @@
         </div>
 
         <div class="row browser-box">
-           <div class="col-md-2 box" *ngFor="let data of browseAll" style=" background-color:rgb(167, 143, 113) ;" >
+           <div class="col-md-2 box" *ngFor="let data of browseAll" [ngStyle]="{'backgroundColor': data.color }" >
                 <div class="title">
                     <h4>{{data.title}}</h4>
                 </div>
