--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,7 +50,7 @@
 
     <div class="row dash-playlist">
         <div class="col-md-2" *ngFor="let card of topMix">
-            <div class="card-box" >
+            <div class="card-box" (click)="playlistRoute('37i9dQZF1Epps0uHncFzmh')">
                 <img class="card-img" src="{{card.img}}">
                 <div class="dash-descp">
                     <span>{{card.title}}</span>
