--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -1,1 +1,63 @@
-<p>playlist works!</p>
+<div class="container">
+    <div class="row" style="padding-bottom: 1em;">
+        <div class="col-md-2">
+            <img class="play-cover" src="{{coverImg}}">
+        </div>
+        <div class="col-md-10 play-title">
+            <h6 style="font-size: 14px;">PLAYLIST</h6>
+            <span style="font-size: 5em;">{{coverName}}</span>
+            <h6 style="font-size:16px; font-family: 'circular-light'; color: #b3b3b3;">{{descp}}</h6>
+            <p class="icon-spotify">
+            <i class="fa-brands fa-spotify"></i><span style="font-size: 15px;">Spotify</span>
+            <i class="fa-solid fa-circle"></i><span style="font-size: 14px; font-family: 'circular-light';">{{likes}} likes</span>
+            <i class="fa-solid fa-circle"></i><span style="font-size: 14px; font-family: 'circular-light';">50 songs,</span>
+            <span style="font-size: 14px; font-family: 'circular-light'; color: hsla(0,0%,100%,.7);
+            white-space: nowrap;">&nbsp;about 2 hr 30 min</span>
+        </p>
+        </div>
+           
+    </div>
+
+    <div>
+    <div class="row">
+        <span class="icon-spotify">
+            <i class="fa-solid fa-circle-play"></i>
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-ellipsis"></i>
+        </span>
+    </div>
+
+    <div class="row table-row">
+        <table class="table table-borderless">
+            <thead>
+              <tr>
+                <th scope="col" style="width: 3em;">#</th>
+                <th scope="col">TITLE</th>
+                <th scope="col">ALBUM</th>
+                <th scope="col">DATE ADDED</th>
+                <th scope="col"><i class="fa-regular fa-clock"></i></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let data of list; let i = index">
+                <th class="play-no" scope="row">{{i + 1}}</th>
+                <td>
+                    <div class="row">
+                        <div class="col-sm-2">
+                            <img style="width: 3em;" src="{{data.cover}}">
+                        </div>
+                        <div class="col-sm-10 pull-left" style="margin-left: -2em;">
+                            <h6 style="color: #fff; font-family: circular-medium; margin: 1px 0; font-size: 16px;">{{data.title}}</h6>
+                            <span style="color: #b3b3b3; font-family: circular-light; font-size: 14px;">{{ renderOptionText(data.artist)}}</span>
+                        </div>
+                    </div>
+                </td>
+                <td><span style="color: #b3b3b3; font-family: circular-light; font-size: 14px;">{{data.album}}</span></td>
+                <td><span style="color: #b3b3b3; font-family: circular-light; font-size: 14px;">1 Day Ago</span></td>
+                <td><span style="color: #b3b3b3; font-family: circular-light; font-size: 14px;">{{data.duration}}</span></td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+    </div>
+</div>
