--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
         <h3>Good Afternoon</h3>
     </div>
 
-    <div class="row" style="margin-bottom: 1rem; padding-right: 1em;">
+    <div class="row top-dash" style="margin-bottom: 1rem;">
         <div class="col-md-4 cover-top" (click)="playlistRoute('37i9dQZF1EMbhPOSXmUInX')">
             <div class="playlist-dashboard">
                     <img src="../../assets/cover/top song 2020.jpg" class="cover-photo">
@@ -23,7 +23,7 @@
             </div>
         </div>
     </div>
-    <div class="row" style="padding-right: 1em;">
+    <div class="row top-dash">
         <div class="col-md-4 cover-top" (click)="playlistRoute('37i9dQZF1EZT8cSzhJA9lL')">
             <div class="playlist-dashboard">
                     <img src="../../assets/cover/cover-4.jpg" class="cover-photo">
